[metadata]
name = floatation
version = 0.1.0
description = Floating point utilities
long_description = file: README.md
url = https://github.com/mjansche/floatation
author = Martin Jansche
author_email = mjansche+floatation@gmail.com
license = Apache 2.0
license_files = LICENSE
classifier =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
zip_safe = true
python_requires = >=3.6
packages = find:
package_dir =
    = py

[options.packages.find]
where = py
include = floatation

[pydocstyle]
ignore = D102, D105, D107, D203, D213
